spacing issues corrected

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ h1 {
 
 h2, h3, h4 {
     float: inline-start;
-    margin: 20px 0;
+    margin: 20px 0 10px 0;
     font-size: 25px;
    
 } 
